k8s/native_yaml/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-client-svc
  namespace: spark
spec:
  selector:
    app: spark-client
  ports:
    - name: "notebook"
      port: 8888
      targetPort: 8888
    - name: "block-manager"
      port: 8001
      targetPort: 8001
    - name: "driver-port"
      port: 8002
      targetPort: 8002
    - name: "web-ui"
      port: 4040
      targetPort: 4040
      - name: "suffle-service"
      port: 7337
      targetPort: 7337
